--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "start": "php artisan serve --port=9999",
+        "start": "php artisan serve",
         "dev": "vite",
         "build": "vite build"
     },
