--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "devDependencies": {
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@google-cloud/dialogflow": "^6.10.0"
     }
 }
